--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,12 @@ input[type=text], input[type=email] {
     border: 1px solid #87a3a6;
     border-radius: 0.5rem;
 }
+input[type="text"]:focus,
+input[type="email"]:focus, textarea:focus {
+    outline: none;
+    border-color: var(--Green);
+}
+
 .input-wrapper:nth-of-type(1),
 .input-wrapper:nth-of-type(2),
 .input-wrapper:nth-of-type(3),
@@ -81,7 +87,7 @@ textarea {
 input[type="checkbox"] {
     appearance: none;
     border: 1px solid #87a3a6;
-    background-color: var(--Green);
+    background-color: var(--White); /* Fomerly green*/
     width: 1rem;
     height: 1rem;
     border-radius: 0.15rem;
@@ -94,7 +100,7 @@ input[type="checkbox"]::before {
     height: 0.6rem;
     transform: scale(0);
     transition: 120ms ease-in-out;
-    box-shadow: inset 1em 1em var(--White);
+    box-shadow: inset 1em 1em var(--Green);
     transform-origin: bottom left;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
@@ -118,3 +124,47 @@ input[type="submit"] {
     font-size: 1rem;
     margin: 0.5rem 0 0.7rem 0;
 }
+
+
+/* Tablet or Ipad designs starting from width of 700px */
+@media (min-width: 43.75rem) and (max-width: 56.2rem) {
+    body {
+        margin-top: 3rem;
+    }
+    .first-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 97%;
+        gap: 1rem;
+    }
+    input[type=text], input[type=email] {
+        padding: 1rem 0.5rem;
+    }
+
+    /* radio box design */
+    .input-wrapper:nth-of-type(3) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem; 
+        align-items: center;
+        width: 97%;
+    }
+    .input-wrapper:nth-of-type(3) > label:first-of-type {
+        grid-column: 1 / -1; 
+        line-height: 0.3rem;
+    }
+    .errors {
+        grid-column: 1 / -1; 
+        color: red;
+    }
+
+    /* Submit button */
+    input[type="submit"] {
+        width: 97%;
+        padding: 1rem 0.5rem;
+        margin: 1.5rem 0 1.5rem 0;
+        font-size: 1.5rem;
+    }
+}
+
+/* screen size starting from 900px */
