--- a/styles/style.css
+++ b/styles/style.css
@@ -251,5 +251,6 @@ input[type="submit"] {
         padding: 1rem 0.5rem;
         margin: 1.5rem 0 1.5rem 0;
         font-size: 1.5rem;
+        cursor: pointer;
     }
 }
